--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "sudo-prompt": "^9.2.1",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.3.3",
     "web-vitals": "^2.1.0",
