--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "autoprefixer": "^10.4.16",
     "child_process": "^1.0.2",
     "express": "^4.18.2",
+    "path-browserify": "^1.0.1",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -51,7 +52,12 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/express": "^4.17.21",
-    "ts-node": "^10.9.1"
+    "clean-webpack-plugin": "^4.0.0",
+    "html-webpack-plugin": "^5.5.4",
+    "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.1",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4"
   },
   "browser": {
     "child_process": false,
