--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "yarn": "^1.22.19"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "yarn server & react-scripts start",
     "server": "ts-node src/server/server.ts",
     "build": "react-scripts build",
     "test": "react-scripts test",
