結果を記載しているファイルを整理するため削除した

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,6 @@ yarn-debug.log*
 yarn-error.log*
 
 # results
-nmap_scan_*
-src/scripts/result.json
+src/scripts/
 src/scripts/results/
+nmap_scan_*.txt
