--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@types/cors": "^2.8.17",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "autoprefixer": "^10.4.16",
     "child_process": "^1.0.2",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "path-browserify": "^1.0.1",
     "postcss": "^8.4.31",
