--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "autoprefixer": "^10.4.16",
+    "axios": "^1.6.5",
     "child_process": "^1.0.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
