--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/react-transition-group": "^4.4.10",
     "autoprefixer": "^10.4.16",
     "axios": "^1.6.5",
     "child_process": "^1.0.2",
@@ -20,7 +21,8 @@
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
+    "react-transition-group": "^4.4.5",
     "sudo-prompt": "^9.2.1",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.3.3",
@@ -58,7 +60,7 @@
     "clean-webpack-plugin": "^4.0.0",
     "html-webpack-plugin": "^5.5.4",
     "ts-loader": "^9.5.1",
-    "ts-node": "^10.9.1",
+    "ts-node": "^10.9.2",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
   },
