--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "tailwindcss": "^3.3.5",
     "typescript": "^5.3.3",
     "web-vitals": "^2.1.0",
+    "xml2js": "^0.6.2",
     "yarn": "^1.22.19"
   },
   "scripts": {
@@ -57,6 +58,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/express": "^4.17.21",
+    "@types/xml2js": "^0.4.14",
     "clean-webpack-plugin": "^4.0.0",
     "html-webpack-plugin": "^5.5.4",
     "ts-loader": "^9.5.1",
