--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/react-transition-group": "^4.4.10",
+    "@types/xml-parser": "^1.2.33",
     "autoprefixer": "^10.4.16",
     "axios": "^1.6.5",
     "child_process": "^1.0.2",
@@ -27,6 +28,7 @@
     "tailwindcss": "^3.3.5",
     "typescript": "^5.3.3",
     "web-vitals": "^2.1.0",
+    "xml-parser": "^1.2.1",
     "xml2js": "^0.6.2",
     "yarn": "^1.22.19"
   },
