--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "child_process": "^1.0.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "fast-xml-parser": "^4.3.3",
     "path-browserify": "^1.0.1",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
